--- a/007/pom.xml
+++ b/007/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>task007</groupId>
-    <artifactId>task007</artifactId>
+    <groupId>007</groupId>
+    <artifactId>007</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
