[sem1] chagelogs for db

--- a/CRM-MedicalClinic/module-domain/pom.xml
+++ b/CRM-MedicalClinic/module-domain/pom.xml
@@ -70,4 +70,102 @@
         </dependency>
     </dependencies>
 
+    <profiles>
+        <profile>
+            <id>db-changelog</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.liquibase</groupId>
+                        <artifactId>liquibase-maven-plugin</artifactId>
+                        <version>3.1.0</version>
+                        <executions>
+                            <execution>
+                                <id>default-cli</id>
+                                <phase>process-resources</phase>
+                                <configuration>
+                                    <changeLogFile>${basedir}/src/main/resources/db/changelog.xml</changeLogFile>
+                                    <propertyFileWillOverride>false</propertyFileWillOverride>
+                                    <dropFirst>false</dropFirst>
+                                    <propertyFile>${basedir}/src/main/resources/liquibase.properties
+                                    </propertyFile>
+                                </configuration>
+                                <goals>
+                                    <goal>update</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>db-seeds</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.liquibase</groupId>
+                        <artifactId>liquibase-maven-plugin</artifactId>
+                        <version>3.1.0</version>
+                        <executions>
+                            <execution>
+                                <id>default-cli</id>
+                                <phase>process-resources</phase>
+                                <configuration>
+                                    <changeLogFile>${basedir}/src/main/resources/db/seeds.xml</changeLogFile>
+                                    <propertyFileWillOverride>true</propertyFileWillOverride>
+                                    <dropFirst>false</dropFirst>
+                                    <propertyFile>${basedir}/src/main/resources/liquibase.properties
+                                    </propertyFile>
+                                </configuration>
+                                <goals>
+                                    <goal>update</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
+    <build>
+        <finalName>Medical Clinic domain</finalName>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <testSource>${java.version}</testSource>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.6</version>
+            </plugin>
+
+            <plugin>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-maven-plugin</artifactId>
+                <version>3.4.2</version>
+                <configuration>
+                    <changeLogFile>${basedir}/src/main/resources/db/changelog.xml</changeLogFile>
+                    <propertyFileWillOverride>false</propertyFileWillOverride>
+                    <dropFirst>false</dropFirst>
+                    <propertyFile>${basedir}/src/main/resources/liquibase.properties</propertyFile>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>update</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
