--- a/CRM-MedicalClinic/module-web/pom.xml
+++ b/CRM-MedicalClinic/module-web/pom.xml
@@ -57,6 +57,11 @@
             <artifactId>spring-security-taglibs</artifactId>
             <version>${spring-security.version}</version>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>module-web</finalName>
