--- a/CRM-MedicalClinic/module-service/pom.xml
+++ b/CRM-MedicalClinic/module-service/pom.xml
@@ -18,6 +18,26 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>CRM-MedicalClinic</groupId>
+            <artifactId>module-domain</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>1.1.0.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>5.2.2.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>${spring-security.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
