--- a/CRM-MedicalClinic/module-web/pom.xml
+++ b/CRM-MedicalClinic/module-web/pom.xml
@@ -13,7 +13,6 @@
     <name>module-web</name>
 
     <properties>
-        <spring-security.version>4.0.3.RELEASE</spring-security.version>
     </properties>
 
     <dependencies>
@@ -61,6 +60,11 @@
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
             <version>2.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>5.2.2.Final</version>
         </dependency>
     </dependencies>
     <build>
