--- a/CRM-MedicalClinic/pom.xml
+++ b/CRM-MedicalClinic/pom.xml
@@ -18,6 +18,7 @@
     <properties>
         <java.version>1.8</java.version>
         <spring.version>4.2.4.RELEASE</spring.version>
+        <spring-security.version>4.0.3.RELEASE</spring-security.version>
     </properties>
 
     <dependencies>
