--- a/CRM-MedicalClinic/module-domain/pom.xml
+++ b/CRM-MedicalClinic/module-domain/pom.xml
@@ -68,6 +68,12 @@
             <artifactId>mchange-commons-java</artifactId>
             <version>0.2.11</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>19.0</version>
+        </dependency>
+
     </dependencies>
 
     <profiles>
