--- a/CRM-MedicalClinic/module-service/pom.xml
+++ b/CRM-MedicalClinic/module-service/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>spring-security-core</artifactId>
             <version>${spring-security.version}</version>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
     </dependencies>
 
 </project>
