--- a/CRM-MedicalClinic/module-service/pom.xml
+++ b/CRM-MedicalClinic/module-service/pom.xml
@@ -24,6 +24,11 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>CRM-MedicalClinic</groupId>
+            <artifactId>module-log</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
             <version>1.1.0.Final</version>
