--- a/CRM-MedicalClinic/module-web/pom.xml
+++ b/CRM-MedicalClinic/module-web/pom.xml
@@ -27,6 +27,11 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>CRM-MedicalClinic</groupId>
+            <artifactId>module-log</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.freemarker</groupId>
             <artifactId>freemarker</artifactId>
             <version>2.3.23</version>
