--- a/CRM-MedicalClinic/module-web/pom.xml
+++ b/CRM-MedicalClinic/module-web/pom.xml
@@ -71,6 +71,12 @@
             <artifactId>hibernate-validator</artifactId>
             <version>5.2.2.Final</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <finalName>module-web</finalName>
