--- a/SmashBall/pom.xml
+++ b/SmashBall/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.pliskin</groupId>
     <artifactId>SmashBall</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
     <name>SmashBall</name>
@@ -15,6 +15,7 @@
     </properties>
 
     <build>
+        <finalName>Smash ball</finalName>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -28,7 +29,7 @@
             <plugin>
                 <groupId>com.zenjava</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
-                <version>2.0</version>
+                <version>8.4.0</version>
                 <configuration>
                     <mainClass>com.pliskin.BallGame</mainClass>
                 </configuration>
