[sem-2] auth is ready/UI was updated with new scenes/REST controllers were updated

--- a/CRM-MedicalClinic/module-web/src/main/webapp/WEB-INF/web.xml
+++ b/CRM-MedicalClinic/module-web/src/main/webapp/WEB-INF/web.xml
@@ -20,7 +20,9 @@
     </listener>
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>WEB-INF/root-config.xml</param-value>
+        <param-value>
+            WEB-INF/root-config.xml
+        </param-value>
     </context-param>
 
     <filter>
